# lunary

./: LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.trae/documents/: tauri-react-tantivy-prd.md  tauri-react-tantivy-technical-architecture.md  实现索引目录管理与持久化.md
documents/: TO_DO.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/locales/: en-US.yml  zh-CN.yml
src-tauri/src/: indexer.rs  lib.rs  main.rs  search.rs  types.rs
src/components/: Modal.tsx  SearchFilters.tsx  SearchHistory.tsx  SearchResults.tsx  Sidebar.tsx
src/components/locales/: en.ts  zh.ts
src/hooks/: useTheme.ts
src/i18n/: index.tsx
src/pages/: IndexManagementPage.tsx  SearchPage.tsx  SettingsPage.tsx
src/pages/locales/: en.ts  zh.ts
src/types/: index.ts
src/utils/: directoriesStorage.ts  indexStatusStorage.ts  settingsStorage.ts
