[package]
name = "lunary"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lunary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.25"
walkdir = "2"
chrono = "0.4"
# calamine用于读取EXCEL文件
calamine = "0.22" 
# quick-xml和zip配合，用于读取WORD文档
quick-xml = "0.38.4"
zip = "0.6"
# pdf-extract用于提取PDF中的文字
pdf-extract = "0.6"

[profile.dev]
debug = true
